--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Grid number</title>
 </head>
+
 <body>
-    <h1>Hello World</h1>
+
+    <body>
+        <div class="parent">
+            <div class="lettre">A</div>
+            <div class="lettre">B</div>
+            <div class="lettre">C</div>
+            <div class="lettre">D</div>
+            <div class="lettre">E</div>
+            <div class="lettre">F</div>
+            <div class="lettre">G</div>
+            <div class="lettre">H</div>
+            <div class="lettre">I</div>
+            <div class="lettre">J</div>
+            <div class="lettre">K</div>
+            <div class="lettre">L</div>
+            <div class="lettre">M</div>
+            <div class="lettre">N</div>
+            <div class="lettre">O</div>
+            <div class="lettre">P</div>
+            <div class="lettre">Q</div>
+            <div class="lettre">R</div>
+            <div class="lettre">S</div>
+            <div class="lettre">T</div>
+            <div class="lettre">U</div>
+            <div class="lettre">V</div>
+            <div class="lettre">W</div>
+            <div class="lettre">X</div>
+            <div class="lettre">Y</div>
+            <div class="lettre">Z</div>
+        </div>
+    </body>
+
 </body>
+
 </html>
